--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       android:versionCode="1"
-      android:versionName="1.0" package="com.marcoduff.birthdaymanager">
+      package="com.marcoduff.birthdaymanager" android:versionName="1.1">
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true">
         <activity android:label="@string/app_name" android:name=".BirthdayManagerActivity">
             <intent-filter>
@@ -11,7 +11,7 @@
         </activity>
 
     </application>
-    <uses-sdk android:minSdkVersion="8"/>
+    <uses-sdk android:minSdkVersion="7"/>
 
 <uses-permission android:name="android.permission.READ_CONTACTS"></uses-permission>
 </manifest> 
