--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      android:versionCode="1"
-      package="com.marcoduff.birthdaymanager" android:versionName="@string/version">
+      package="com.marcoduff.birthdaymanager" android:versionName="1.3.1" android:versionCode="2">
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="false">
         <activity android:label="@string/app_name" android:name=".BirthdayManagerActivity">
             <intent-filter>
